Change input label and id for participants

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
        <p class="text-xs" style="color: #6B5B4F;">Completa tus datos para confirmar tu asistencia</p>
       </div><!-- Form -->
       <form id="confirmation-form" class="space-y-4"><!-- Nombre completo -->
-       <div><label for="full-name" class="block text-xs font-semibold mb-2" style="color: #5BA3C6;"> Nombres Completos * </label> <input type="text" id="full-name" name="full_name" placeholder="Ingresa tu nombre completo" required class="w-full px-4 py-2 rounded-lg border-2 focus:outline-none transition text-sm" style="border-color: #87CEEB; color: #6B5B4F;">
+       <div><label for="participantes" class="block text-xs font-semibold mb-2" style="color: #5BA3C6;"> Nombres Completos * </label> <input type="text" id="participantes" name="participantes" placeholder="Ingresa tu nombre completo" required class="w-full px-4 py-2 rounded-lg border-2 focus:outline-none transition text-sm" style="border-color: #87CEEB; color: #6B5B4F;">
         <p class="text-xs mt-2" style="color: #FF69B4;">💡 Si asisten más personas, vuelve a llenar el formulario con cada nombre</p>
        </div><!-- Sugerencias box -->
        <div class="p-3 rounded-lg" style="background: linear-gradient(135deg, rgba(255, 182, 193, 0.3) 0%, rgba(255, 212, 191, 0.3) 100%); border: 2px dashed #FFB6C1;">
