--- a/index.html
+++ b/index.html
@@ -449,11 +449,10 @@
         // Send data to Google Apps Script
         const response = await fetch('https://script.google.com/macros/s/AKfycbzYHa_Eh35m4CBtFELuQvxWdAdi7_Jkczf-HWmKtJX63CT-nMngMRE4nSKozviW6SCjBg/exec', {
           method: 'POST',
-          mode: 'no-cors',
           headers: {
             'Content-Type': 'application/x-www-form-urlencoded'
           },
-          body: `full_name=${encodeURIComponent(fullName)}`
+          body: `full_name=${encodeURIComponent(participantes)}`
         });
 
         // Show success message
