--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
        <p class="text-xs" style="color: #6B5B4F;">Completa tus datos para confirmar tu asistencia</p>
       </div><!-- Form -->
       <form id="confirmation-form" class="space-y-4"><!-- Nombre completo -->
-       <div><label for="participantes" class="block text-xs font-semibold mb-2" style="color: #5BA3C6;"> Nombres Completos * </label> <input type="text" id="participantes" name="participantes" placeholder="Ingresa tu nombre completo" required class="w-full px-4 py-2 rounded-lg border-2 focus:outline-none transition text-sm" style="border-color: #87CEEB; color: #6B5B4F;">
+       <div><label for="full_name" class="block text-xs font-semibold mb-2" style="color: #5BA3C6;"> Nombres Completos * </label> <input type="text" id="full_name" name="full_name" placeholder="Ingresa tu nombre completo" required class="w-full px-4 py-2 rounded-lg border-2 focus:outline-none transition text-sm" style="border-color: #87CEEB; color: #6B5B4F;">
         <p class="text-xs mt-2" style="color: #FF69B4;">💡 Si asisten más personas, vuelve a llenar el formulario con cada nombre</p>
        </div><!-- Sugerencias box -->
        <div class="p-3 rounded-lg" style="background: linear-gradient(135deg, rgba(255, 182, 193, 0.3) 0%, rgba(255, 212, 191, 0.3) 100%); border: 2px dashed #FFB6C1;">
@@ -447,15 +447,14 @@
 
       try {
         // Send data to Google Apps Script
-        const response = await fetch('https://script.google.com/macros/s/AKfycbzYHa_Eh35m4CBtFELuQvxWdAdi7_Jkczf-HWmKtJX63CT-nMngMRE4nSKozviW6SCjBg/exec', {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbwkFr6EOnusDz5D-QtLJOJ1-FeOIe-Wf70vwz4KDhXa7UKA9reQ8tlYmFoN5H8Hu8HqSA/exec', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/x-www-form-urlencoded'
           },
-          body: `full_name=${encodeURIComponent(participantes)}`
+          body: `full_name=${encodeURIComponent(full_name)}`
         });
-
-        // Show success message
+  // Show success message
         loadingMessage.classList.add('hidden');
         successMessage.classList.remove('hidden');
 
