--- a/index.html
+++ b/index.html
@@ -162,9 +162,20 @@
       </div>
      </div><!-- Action Buttons -->
      <div class="flex flex-col sm:flex-row gap-2 mb-6 justify-center"><a href="https://maps.app.goo.gl/F9kqaiixx1LzxTBd8" target="_blank" rel="noopener noreferrer" class="px-4 py-2 rounded-lg font-semibold text-white text-sm transition hover:scale-105" style="background: linear-gradient(135deg, #87CEEB 0%, #5BA3C6 100%);"> 📍 Ver Ubicación </a> <a href="https://www.google.com/calendar/render?action=TEMPLATE&amp;text=Babyshower+de+Adrián&amp;dates=20260121T120000Z/20260121T140000Z&amp;details=&amp;location=Jirón+Huaraz+2030,+Pueblo+Libre" target="_blank" rel="noopener noreferrer" class="px-4 py-2 rounded-lg font-semibold text-white text-sm transition hover:scale-105" style="background: linear-gradient(135deg, #FFD700 0%, #D4AF37 100%);"> 📅 Agregar Calendario </a>
+     </div><!-- Sugerencias Box -->
+     <div class="mb-6 p-3 rounded-lg" style="background: linear-gradient(135deg, rgba(255, 182, 193, 0.3) 0%, rgba(255, 212, 191, 0.3) 100%); border: 2px dashed #FFB6C1;">
+      <p class="font-playfair text-xs font-bold mb-2" style="color: #D4AF37;">✨ Sugerencias:</p>
+      <div class="space-y-2 text-left">
+       <div class="flex items-start gap-2"><span class="text-sm flex-shrink-0">😄</span>
+        <p class="text-xs" style="color: #6B5B4F;">Lleva toda la actitud para divertirte</p>
+       </div>
+       <div class="flex items-start gap-2"><span class="text-sm flex-shrink-0">⏰</span>
+        <p class="text-xs" style="color: #6B5B4F;">Te sugerimos llegar 10 minutos antes</p>
+       </div>
+      </div>
      </div><!-- Confirmation Button -->
      <div class="mb-6 p-3 rounded-lg text-center" style="background: linear-gradient(135deg, rgba(255, 182, 193, 0.4) 0%, rgba(255, 212, 191, 0.4) 100%); border: 2px solid #FFB6C1;">
-      <p class="text-xs font-semibold mb-2" style="color: #5BA3C6;">⏰ Confirmación hasta el domingo 11 de enero</p><button id="confirm-btn" class="w-full px-6 py-2 rounded-lg font-bold text-white text-sm transition hover:scale-105" style="background: linear-gradient(135deg, #FF69B4 0%, #FF1493 100%);"> 🎉 Confirmar Mi Participación </button>
+      <p class="text-xs font-semibold mb-2" style="color: #5BA3C6;">⏰ Confirmación hasta el domingo 11 de enero</p><a href="https://forms.gle/etRuwtmQvEpqL6cXA" target="_blank" rel="noopener noreferrer" id="confirm-btn" class="w-full block px-6 py-2 rounded-lg font-bold text-white text-sm transition hover:scale-105" style="background: linear-gradient(135deg, #FF69B4 0%, #FF1493 100%);"> 🎉 Confirmar Mi Participación </a>
      </div><!-- Decorative elements -->
      <div class="flex justify-center gap-3"><span class="text-xl animate-float" style="animation-delay: 0s;">🧸</span> <span class="text-xl animate-float" style="animation-delay: 0.3s;">⭐</span> <span class="text-xl animate-float" style="animation-delay: 0.6s;">🎀</span> <span class="text-xl animate-float" style="animation-delay: 0.9s;">⭐</span> <span class="text-xl animate-float" style="animation-delay: 1.2s;">🧸</span>
      </div><!-- Bottom banner -->
@@ -174,59 +185,14 @@
        <div class="absolute right-0 top-0 bottom-0 w-3" style="background: linear-gradient(180deg, #FFD700 0%, #D4AF37 100%);"></div>
        <p id="footer-message" class="font-playfair text-xs sm:text-sm italic font-semibold px-3" style="color: #5BA3C6;">"Celebramos la llegada de nuestro pequeño tesoro."</p>
       </div>
-     </div>
-    </div>
-   </div><!-- Modal de Confirmación -->
-   <div id="confirmation-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50" style="display: none;">
-    <div class="gold-border rounded-3xl w-full max-w-md mx-auto relative overflow-hidden" style="background: linear-gradient(180deg, #FFFEF9 0%, #FFF9E6 100%); animation: slideUp 0.3s ease-out;"><!-- Close button --> <button id="close-modal" class="absolute top-4 right-4 text-2xl font-bold transition hover:scale-110" style="color: #D4AF37;">✕</button>
-     <div class="px-6 py-8 sm:px-10 sm:py-10"><!-- Header -->
-      <div class="text-center mb-6">
-       <h2 class="font-playfair text-xl font-bold mb-2" style="color: #5BA3C6;">¡Queremos contar contigo!</h2>
-       <p class="text-xs" style="color: #6B5B4F;">Completa tus datos para confirmar tu asistencia</p>
-      </div><!-- Form -->
-      <form id="confirmation-form" class="space-y-4"><!-- Nombre completo -->
-       <div><label for="full-name" class="block text-xs font-semibold mb-2" style="color: #5BA3C6;"> Nombres Completos * </label> <input type="text" id="full-name" name="full_name" placeholder="Ingresa tu nombre completo" required class="w-full px-4 py-2 rounded-lg border-2 focus:outline-none transition text-sm" style="border-color: #87CEEB; color: #6B5B4F;">
-        <p class="text-xs mt-2" style="color: #FF69B4;">💡 Si asisten más personas, vuelve a llenar el formulario con cada nombre</p>
-       </div><!-- Sugerencias box -->
-       <div class="p-3 rounded-lg" style="background: linear-gradient(135deg, rgba(255, 182, 193, 0.3) 0%, rgba(255, 212, 191, 0.3) 100%); border: 2px dashed #FFB6C1;">
-        <p class="font-playfair text-xs font-bold mb-2" style="color: #D4AF37;">✨ Sugerencias:</p>
-        <div class="space-y-1 text-left">
-         <div class="flex items-start gap-2"><span class="text-sm flex-shrink-0">😄</span>
-          <p class="text-xs" style="color: #6B5B4F;">Lleva toda la actitud para divertirte</p>
-         </div>
-         <div class="flex items-start gap-2"><span class="text-sm flex-shrink-0">⏰</span>
-          <p class="text-xs" style="color: #6B5B4F;">Te sugerimos llegar 10 minutos antes</p>
-         </div>
-        </div>
-       </div><!-- Botones -->
-       <div class="flex gap-3 pt-2"><button type="button" id="cancel-btn" class="flex-1 px-4 py-2 rounded-lg font-semibold text-white text-sm transition hover:scale-105" style="background: linear-gradient(135deg, #B0C4DE 0%, #87CEEB 100%);"> Cancelar </button> <button type="submit" id="submit-btn" class="flex-1 px-4 py-2 rounded-lg font-semibold text-white text-sm transition hover:scale-105" style="background: linear-gradient(135deg, #FF69B4 0%, #FF1493 100%);"> ✓ Confirmar </button>
-       </div><!-- Loading state -->
-       <div id="loading-message" class="hidden text-center text-xs font-semibold" style="color: #5BA3C6;">
-        Enviando confirmación...
-       </div><!-- Success message -->
-       <div id="success-message" class="hidden text-center space-y-3">
-        <div class="p-3 rounded-lg" style="background: rgba(144, 238, 144, 0.3); color: #228B22; font-semibold; font-size: 12px;">
-         ✓ ¡Gracias por confirmar! Nos vemos en el baby shower 🎉
-        </div><button type="button" id="add-another-btn" class="w-full px-4 py-2 rounded-lg font-semibold text-white text-sm transition hover:scale-105" style="background: linear-gradient(135deg, #87CEEB 0%, #5BA3C6 100%);"> ➕ Seguir agregando </button>
-       </div><!-- Error message -->
-       <div id="error-message" class="hidden text-center p-3 rounded-lg text-xs font-semibold" style="background: rgba(255, 69, 69, 0.3); color: #DC143C;"></div>
-      </form>
+     </div><!-- Parents Footer -->
+     <div class="mt-8 text-center space-y-2 border-t-2 pt-6" style="border-color: #D4AF37;">
+      <p class="text-xs font-semibold" style="color: #5BA3C6;">Atentamente</p>
+      <p class="font-playfair text-sm font-bold" style="color: #6B5B4F;">Edwin Ticlla &amp; Alicia Ludeña</p>
      </div>
     </div>
    </div>
   </div>
-  <style>
-    @keyframes slideUp {
-      from {
-        transform: translateY(30px);
-        opacity: 0;
-      }
-      to {
-        transform: translateY(0);
-        opacity: 1;
-      }
-    }
-  </style>
   <script>
     const defaultConfig = {
       baby_name: "Adrián Matías!",
@@ -381,94 +347,6 @@
     updateCountdown();
     setInterval(updateCountdown, 60000);
 
-    // Confirmation Form Logic
-    const confirmBtn = document.getElementById('confirm-btn');
-    const modal = document.getElementById('confirmation-modal');
-    const closeModalBtn = document.getElementById('close-modal');
-    const cancelBtn = document.getElementById('cancel-btn');
-    const form = document.getElementById('confirmation-form');
-    const fullNameInput = document.getElementById('full-name');
-    const submitBtn = document.getElementById('submit-btn');
-    const loadingMessage = document.getElementById('loading-message');
-    const successMessage = document.getElementById('success-message');
-    const errorMessage = document.getElementById('error-message');
-    const addAnotherBtn = document.getElementById('add-another-btn');
-
-    // Open modal
-    confirmBtn.addEventListener('click', () => {
-      modal.style.display = 'flex';
-      fullNameInput.focus();
-    });
-
-    // Close modal
-    function closeModal() {
-      modal.style.display = 'none';
-      form.reset();
-      loadingMessage.classList.add('hidden');
-      successMessage.classList.add('hidden');
-      errorMessage.classList.add('hidden');
-      submitBtn.disabled = false;
-    }
-
-    closeModalBtn.addEventListener('click', closeModal);
-    cancelBtn.addEventListener('click', closeModal);
-
-    // Close modal when clicking outside
-    modal.addEventListener('click', (e) => {
-      if (e.target === modal) closeModal();
-    });
-
-    // Add another person
-    addAnotherBtn.addEventListener('click', () => {
-      form.reset();
-      loadingMessage.classList.add('hidden');
-      successMessage.classList.add('hidden');
-      errorMessage.classList.add('hidden');
-      submitBtn.disabled = false;
-      fullNameInput.focus();
-    });
-
-    // Form submission
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const fullName = fullNameInput.value.trim();
-
-      if (!fullName) {
-        errorMessage.textContent = 'Por favor ingresa tu nombre completo';
-        errorMessage.classList.remove('hidden');
-        return;
-      }
-
-      // Show loading state
-      submitBtn.disabled = true;
-      loadingMessage.classList.remove('hidden');
-      errorMessage.classList.add('hidden');
-
-      try {
-        // Send data to Google Apps Script
-        const response = await fetch('https://script.google.com/macros/s/AKfycbzYHa_Eh35m4CBtFELuQvxWdAdi7_Jkczf-HWmKtJX63CT-nMngMRE4nSKozviW6SCjBg/exec', {
-          method: 'POST',
-          mode: 'no-cors',
-          headers: {
-            'Content-Type': 'application/x-www-form-urlencoded'
-          },
-          body: `full_name=${encodeURIComponent(fullName)}`
-        });
-
-        // Show success message
-        loadingMessage.classList.add('hidden');
-        successMessage.classList.remove('hidden');
-
-      } catch (error) {
-        console.error('Error:', error);
-        loadingMessage.classList.add('hidden');
-        errorMessage.textContent = 'Hubo un error al enviar tu confirmación. Por favor intenta de nuevo.';
-        errorMessage.classList.remove('hidden');
-        submitBtn.disabled = false;
-      }
-    });
-
     if (window.elementSdk) {
       window.elementSdk.init({
         defaultConfig,
@@ -478,5 +356,5 @@
       });
     }
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9ba0fd2f959b6df8',t:'MTc2Nzc2MzA0OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9ba1ab8b92d06dfd',t:'MTc2Nzc3MDE5MS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
