Adjust balloon size and update script parameters

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
        <div class="h-px w-12 bg-gradient-to-l from-transparent to-amber-300"></div>
       </div>
      </div><!-- Main teddy bear illustration -->
-     <div class="relative w-40 h-40 mx-auto mb-4 animate-sway">
+     <div class="relative w-32 h-32 sm:w-40 sm:h-40 mx-auto mb-4 animate-sway">
       <svg viewbox="0 0 200 200" class="w-full h-full"><!-- Balloon string --> <path d="M100 45 Q95 60 100 80" stroke="#FFB6C1" stroke-width="2" fill="none" /> <!-- Balloon --> <g class="animate-balloon" style="transform-origin: 100px 30px;">
         <ellipse cx="100" cy="25" rx="25" ry="30" fill="#FFD700" />
         <ellipse cx="100" cy="25" rx="25" ry="30" fill="url(#balloonShine)" />
@@ -356,5 +356,5 @@
       });
     }
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9ba1ab8b92d06dfd',t:'MTc2Nzc3MDE5MS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9ba1b5bf71206dfd',t:'MTc2Nzc3MDYwOS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
